--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ header img{
     position: absolute;
     top: 400px;
     left: 300px;
+    background:transparent;
 }
 .col4{
     position: absolute;
